--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <img src="img/logo.png" alt="Logo" class="header__logo">
         <form class="search">
             <label for="search">
-                <input class="search__field" placeholder="Search over 1,000,000 recipes..." type="text" value="search"/>
+                <input class="search__field" placeholder="Search over 1,000,000 recipes..." type="text" value=""/>
             </label>
             <button class="btn search__btn">
                 <svg class="search__icon">
