--- a/src/index.html
+++ b/src/index.html
@@ -415,6 +415,6 @@
     </div>
 
 </div>
-<!--<script src="js/index.js"></script>-->
-<script type="text/javascript" src="js/bundle.js"></script></body>
+<!--<script type="text/javascript" src="js/index.js"></script>-->
+</body>
 </html>
