--- a/src/index.html
+++ b/src/index.html
@@ -33,140 +33,12 @@
             </div>
             <div class="likes__panel">
                 <ul class="likes__list">
-                    <li>
-                        <a class="likes__link" href="#23456">
-                            <figure class="likes__fig">
-                                <img src="img/test-1.jpg" alt="Test">
-                            </figure>
-                            <div class="likes__data">
-                                <h4 class="likes__name">Pasta with Tomato ...</h4>
-                                <p class="likes__author">The Pioneer Woman</p>
-                            </div>
-                        </a>
-                    </li>
                 </ul>
             </div>
         </div>
     </header>
     <div class="results">
         <ul class="results__list">
-            <li>
-                <a class="results__link results__link--active" href="#23456">
-                    <figure class="results__fig">
-                        <img src="img/test-1.jpg" alt="Test">
-                    </figure>
-                    <div class="results__data">
-                        <h4 class="results__name">Pasta with Tomato ...</h4>
-                        <p class="results__author">The Pioneer Woman</p>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a class="results__link" href="#76767">
-                    <figure class="results__fig">
-                        <img src="img/test-2.jpg" alt="Test">
-                    </figure>
-                    <div class="results__data">
-                        <h4 class="results__name">Pasta Salad with ...</h4>
-                        <p class="results__author">Spicy Perspective</p>
-                    </div>
-                </a>
-            </li>
-
-            <li>
-                <a class="results__link" href="#85354">
-                    <figure class="results__fig">
-                        <img src="img/test-3.jpg" alt="Test">
-                    </figure>
-                    <div class="results__data">
-                        <h4 class="results__name">Homemade Tomato ...</h4>
-                        <p class="results__author">All Recipes</p>
-                    </div>
-                </a>
-            </li>
-
-            <li>
-                <a class="results__link" href="#43563">
-                    <figure class="results__fig">
-                        <img src="img/test-4.jpg" alt="Test">
-                    </figure>
-                    <div class="results__data">
-                        <h4 class="results__name">Pasta with Tomato ...</h4>
-                        <p class="results__author">The Pioneer Woman</p>
-                    </div>
-                </a>
-            </li>
-
-            <li>
-                <a class="results__link" href="#2256665">
-                    <figure class="results__fig">
-                        <img src="img/test-5.jpg" alt="Test">
-                    </figure>
-                    <div class="results__data">
-                        <h4 class="results__name">Greek Pasta with ...</h4>
-                        <p class="results__author">Chow</p>
-                    </div>
-                </a>
-            </li>
-
-            <li>
-                <a class="results__link" href="#7567567">
-                    <figure class="results__fig">
-                        <img src="img/test-9.jpg" alt="Test">
-                    </figure>
-                    <div class="results__data">
-                        <h4 class="results__name">Cherry tomato, kale ...</h4>
-                        <p class="results__author">BBC Good Food</p>
-                    </div>
-                </a>
-            </li>
-
-            <li>
-                <a class="results__link" href="#5676577">
-                    <figure class="results__fig">
-                        <img src="img/test-7.jpg" alt="Test">
-                    </figure>
-                    <div class="results__data">
-                        <h4 class="results__name">Pasta with Fresh ...</h4>
-                        <p class="results__author">Chow</p>
-                    </div>
-                </a>
-            </li>
-
-            <li>
-                <a class="results__link" href="#98798">
-                    <figure class="results__fig">
-                        <img src="img/test-8.jpg" alt="Test">
-                    </figure>
-                    <div class="results__data">
-                        <h4 class="results__name">Buttery Tomato Pasta ...</h4>
-                        <p class="results__author">Simply Recipes</p>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a class="results__link" href="#5464646456">
-                    <figure class="results__fig">
-                        <img src="img/test-10.jpg" alt="Test">
-                    </figure>
-                    <div class="results__data">
-                        <h4 class="results__name">Pesto Pasta Salad ...</h4>
-                        <p class="results__author">Eats Well With Others</p>
-                    </div>
-                </a>
-            </li>
-
-            <li>
-                <a class="results__link" href="#345345435">
-                    <figure class="results__fig">
-                        <img src="img/test-6.jpg" alt="Test">
-                    </figure>
-                    <div class="results__data">
-                        <h4 class="results__name">Pasta with Roasted ...</h4>
-                        <p class="results__author">Two Peas and Their Pod</p>
-                    </div>
-                </a>
-            </li>
 
         </ul>
         <div class="results__pages">
@@ -187,9 +59,9 @@
 
     <div class="recipe">
         <figure class="recipe__fig">
-            <img src="img/test-1.jpg" alt="Tomato" class="recipe__img">
+            <img src="" alt="Tomato" class="recipe__img">
             <h1 class="recipe__title">
-                <span>Pasta with tomato cream sauce</span>
+                <span></span>
             </h1>
         </figure>
         <div class="recipe__details">
@@ -232,72 +104,6 @@
 
         <div class="recipe__ingredients">
             <ul class="recipe__ingredient-list">
-                <li class="recipe__item">
-                    <svg class="recipe__icon">
-                        <use href="img/icons.svg#icon-check"></use>
-                    </svg>
-                    <div class="recipe__count">1000</div>
-                    <div class="recipe__ingredient">
-                        <span class="recipe__unit">g</span>
-                        pasta
-                    </div>
-                </li>
-
-                <li class="recipe__item">
-                    <svg class="recipe__icon">
-                        <use href="img/icons.svg#icon-check"></use>
-                    </svg>
-                    <div class="recipe__count">1/2</div>
-                    <div class="recipe__ingredient">
-                        <span class="recipe__unit">cup</span>
-                        ricotta cheese
-                    </div>
-                </li>
-
-                <li class="recipe__item">
-                    <svg class="recipe__icon">
-                        <use href="img/icons.svg#icon-check"></use>
-                    </svg>
-                    <div class="recipe__count">1</div>
-                    <div class="recipe__ingredient">
-                        <span class="recipe__unit"></span>
-                        can of tomatoes, whole or crushed
-                    </div>
-                </li>
-
-
-                <li class="recipe__item">
-                    <svg class="recipe__icon">
-                        <use href="img/icons.svg#icon-check"></use>
-                    </svg>
-                    <div class="recipe__count">1</div>
-                    <div class="recipe__ingredient">
-                        <span class="recipe__unit"></span>
-                        can tuna packed in olive oil
-                    </div>
-                </li>
-
-                <li class="recipe__item">
-                    <svg class="recipe__icon">
-                        <use href="img/icons.svg#icon-check"></use>
-                    </svg>
-                    <div class="recipe__count">1/2</div>
-                    <div class="recipe__ingredient">
-                        <span class="recipe__unit">cup</span>
-                        grated parmesan cheese
-                    </div>
-                </li>
-
-                <li class="recipe__item">
-                    <svg class="recipe__icon">
-                        <use href="img/icons.svg#icon-check"></use>
-                    </svg>
-                    <div class="recipe__count">1/4</div>
-                    <div class="recipe__ingredient">
-                        <span class="recipe__unit">cup</span>
-                        fresh basil, chopped or torn
-                    </div>
-                </li>
             </ul>
 
             <button class="btn-small recipe__btn">
