changed image url for django deployment

--- a/src/index.html
+++ b/src/index.html
@@ -138,7 +138,7 @@
         <div class="copyright">
             &copy; by Mingxia Li. Powered by
             <a href="http://food2fork.com" target="_blank" class="link">
-                >Food2Fork.com
+                >RapidApi.com
             </a>
         </div>
     </div>
